# Pomegranate

./: .gitignore  CMakeLists.txt  README.md
Include/Pomegranate/: Pomegranate.cmake  audio.cpp  color.cpp  color.h  debug.cpp  debug.h  ecs.cpp  ecs.h  ecs.inl  engine.cpp  engine.h  event_system.cpp  event_system.h  input_manager.cpp  input_manager.h  lua_wrapper.cpp  lua_wrapper.h  pomegranate.h  resource_manager.cpp  resource_manager.h  resource_manager.inl  standard_ecs.cpp  standard_ecs.h  standard_ecs_audio.cpp  standard_ecs_physics.cpp  standard_ecs_physics.h  standard_ecs_rendering.cpp  standard_ecs_rendering.h  standard_ecs_ui.cpp  standard_ecs_ui.h  texture.cpp  vec_math.cpp  vec_math.h  window.cpp  window.h
Include/SDL3/: SDL_vulkan.h
res/scripts/: CameraControllerComponent.lua  CameraControllerSystem.lua
src/: engine.cpp  engine.h  engine.inl  entities.cpp  game.cpp  init.cpp  main.cpp  standard_ecs.cpp  standard_ecs.h  systems.cpp
src/engine/: CMakeLists.txt  color.cpp  color.h  ecs.cpp  ecs.h  ecs.inl  engine.cpp  engine.h  input_manager.cpp  input_manager.h  pomegranate.h  standard_ecs.cpp  standard_ecs.h  standard_ecs_audio.cpp  standard_ecs_audio.h  standard_ecs_physics.cpp  standard_ecs_physics.h  standard_ecs_rendering.cpp  standard_ecs_rendering.h  standard_ecs_ui.cpp  vec_math.cpp  vec_math.h  window.cpp  window.h
